Deadline date updated on navbars

--- a/html/past-refreshes.html
+++ b/html/past-refreshes.html
@@ -64,9 +64,18 @@ body {
 <div class="container">
  <h3>View our past refreshes</h3>
 
+
+<!-- Refresh Row # 1 -->
+
   <div class="row">
 
     <div class="refresh-thumbnail col-sm-2 col-sm-offset-3 col-xs-4">
+      <a href="./images/MAY-1-big.jpg" data-lightbox="refresh-photos" data-title="May Refresh No.1: china mum, lisianthus, stock">
+        <img class="img-responsive" src="./images/MAY-1-small.jpg">
+      </a>
+    </div>
+
+    <div class="refresh-thumbnail col-sm-2 col-xs-4">
       <a href="./images/APR-2-big.jpg" data-lightbox="refresh-photos" data-title="April Refresh No.2:  protea, buplureum, eucalyptus, straw flower">
         <img class="img-responsive" src="./images/APR-2-small.jpg">
       </a>
@@ -78,17 +87,21 @@ body {
       </a>
     </div>
 
-    <div class="refresh-thumbnail col-sm-2 col-xs-4">
+    
+
+  </div>
+
+  <!-- Refresh Row #2 -->
+
+  <div class="row">
+
+    <div class="refresh-thumbnail col-sm-2 col-sm-offset-3 col-xs-4">
       <a href="./images/FEB-1-big.jpg" data-lightbox="refresh-photos" data-title="February Refresh No.1:  tulip, solidago">
         <img class="img-responsive" src="./images/FEB-1-small.jpg">
       </a>
     </div>
 
-  
-  </div>
-  <div class="row">
-
-<div class="refresh-thumbnail col-sm-2 col-sm-offset-3 col-xs-4">
+    <div class="refresh-thumbnail col-sm-2 col-xs-4">
       <a href="./images/JAN-2-big.jpg" data-lightbox="refresh-photos" data-title="January Refresh No.2:  wax flower, alstroemeria, snapdragon">
         <img class="img-responsive" src="./images/JAN-2.png">
       </a>
@@ -101,17 +114,22 @@ body {
       </a>
     </div>
 
-    <div class="refresh-thumbnail col-sm-2 col-xs-4">
+
+  </div>
+
+  <!-- Refresh Row #3 -->
+
+  <div class="row">
+
+    <div class="refresh-thumbnail col-sm-2 col-sm-offset-3 col-xs-4">
       <a href="./images/DEC-2-big.jpg" data-lightbox="refresh-photos" data-title="December Refresh No.2:  spider mum, carnation, coffee bean berry, pine, statice" id="two-line-caption">
         <img class="img-responsive" src="./images/DEC-2-small.jpg">
       </a>
     </div>
 
+<!-- col-xs-offset-2 col-sm-offset-4 -->
 
-  </div>
-  <div class="row">
-
-    <div class="refresh-thumbnail col-sm-2 col-xs-4 col-xs-offset-2 col-sm-offset-4">
+    <div class="refresh-thumbnail col-sm-2 col-xs-4 ">
       <a href="./images/DEC-1-big.jpg" data-lightbox="refresh-photos" data-title="December Refresh No.1:  kale, dusty miller, liatris">
         <img class="img-responsive" src="./images/DEC-1-small.jpg">
       </a>
