--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
 
 
 <div class="jumbotron image-overlay">
-  <img class="img-responsive homepage-banner" alt="Refresh your vase with Lovely Posy" src="./images/homepage-resized.jpg">
+  <img class="img-responsive homepage-banner" alt="Refresh your vase with Lovely Posy" src="./images/homepage-banner.jpg">
 </div>
 
 
@@ -61,32 +61,21 @@
 <div class="container banner-copy-container">
     
     <div class="row">
-        <h1 class="col-xs-10 col-xs-offset-1 tagline">Refresh Your Vase,</h1>
-    </div>
-
-    <div class="row">
-        <h1 class="col-xs-10 col-xs-offset-1 tagline-2 text-center">Twice Monthly</h1>
-    </div>
-
-    <div class="row">
-        <p class="col-xs-9 col-xs-offset-3 sub-tagline"><i>...or more!</i></p>
+        <h1 class="col-xs-10 col-xs-offset-1 col-lg-6 col-lg-offset-4 tagline">REFRESH YOUR VASE</h1>
     </div>
 
 
+
     <div class="row">
-        <p class="col-xs-12 banner-text">curated weekly and bimonthly flowers <br>delivered to your door</p>
+        <p class="col-xs-10 col-xs-offset-1 col-lg-6 col-lg-offset-4 banner-text">brilliantly curated flowers<br>weekly or bimonthly</p>
     </div>
 
     <div class="row">
-        <p class="col-xs-10 col-xs-offset-1 price-text"><strong>starting at $45 / month</strong></p>
+        <p class="col-xs-8 col-xs-offset-4 col-xl-6 col-xl-offset-6 price-text">starts at <strong>$45 / month</strong></p>
     </div>
 
     <div class="row">
-        <p class="col-xs-8 col-xs-offset-2 delivery-text">with free delivery</p>
-    </div>
-
-    <div class="row">
-        <a href="./subscribe.html" class="btn-success col-xs-8 col-xs-offset-2 center-block banner-button">Begin Refreshing</a>
+        <a href="./subscribe.html" class="btn-success col-xs-8 col-xs-offset-4 col-xl-2 col-xl-offset-10 banner-button">Begin Refreshing</a>
     </div>
 </div>
 
